--- a/index.html
+++ b/index.html
@@ -272,25 +272,25 @@
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
                                     <div class="chart text-white wow animated rollIn" data-wow-delay=".3s" data-percent="90">90%</div>
-                                    <h6 class="label font-weight-bold mt-3 text-white">HTML &amp; CSS</h6>
+                                    <h6 class="label mt-3 text-white">HTML &amp; CSS</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
                                     <div class="chart text-white wow animated rollIn" data-wow-delay=".3s" data-percent="75">75%</div>
-                                    <h6 class="label text-white font-weight-bold mt-3">JAVASCRIPT</h6>
+                                    <h6 class="label text-white mt-3">JAVASCRIPT</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
                                     <div class="chart text-white wow animated rollIn" data-wow-delay=".3s" data-percent="85">85%</div>
-                                    <h6 class="label text-white font-weight-bold mt-3">ANIMATION</h6>
+                                    <h6 class="label text-white mt-3">ANIMATION</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
                                     <div class="chart text-white wow animated rollIn" data-wow-delay=".3s" data-percent="80">80%</div>
-                                    <h6 class="label text-white font-weight-bold mt-3">WEB DESIGN</h6>
+                                    <h6 class="label text-white mt-3">WEB DESIGN</h6>
                                 </div>
                             </div>
                         </div>
@@ -310,12 +310,10 @@
                                 <img class='img-fluid' src="imgs/degree.png" alt="">
                             </div>
                             <h2 class="title display-4">
-                                <b>
-                                    <span class='numscroller' data-min='1' data-max='650' data-delay='20'
-                                        data-increment='10'></span>
-                                </b>
+                                <span class='numscroller' data-min='1' data-max='650' data-delay='20'
+                                    data-increment='10'></span>
                             </h2>
-                            <h5 class="desc"><b>Coder Degrees</b></h5>
+                            <h5 class="desc">Coder Degrees</h5>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
@@ -324,12 +322,10 @@
                                 <img class='img-fluid' src="imgs/w-hours.png" alt="">
                             </div>
                             <h2 class="title display-4">
-                                <b>
-                                    <span class='numscroller' data-min='1' data-max='7585' data-delay='50'
-                                        data-increment='50'></span>
-                                </b>
+                                <span class='numscroller' data-min='1' data-max='7585' data-delay='50'
+                                    data-increment='50'></span>
                             </h2>
-                            <h5 class="desc"><b>Working Hours</b></h5>
+                            <h5 class="desc">Working Hours</h5>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
@@ -338,12 +334,10 @@
                                 <img class='img-fluid' src="imgs/smile.png" alt="">
                             </div>
                             <h2 class="title display-4">
-                                <b>
-                                    <span class='numscroller' data-min='1' data-max='311' data-delay='10'
-                                        data-increment='5'></span>
-                                </b>
+                                <span class='numscroller' data-min='1' data-max='311' data-delay='10'
+                                    data-increment='5'></span>
                             </h2>
-                            <h5 class="desc"><b>Satisfied Clients</b></h5>
+                            <h5 class="desc">Satisfied Clients</h5>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
@@ -352,12 +346,10 @@
                                 <img class='img-fluid' src="imgs/cup.png" alt="">
                             </div>
                             <h2 class="title display-4">
-                                <b>
-                                    <span class='numscroller' data-min='1' data-max='9432' data-delay='50'
-                                        data-increment='50'></span>
-                                </b>
+                                <span class='numscroller' data-min='1' data-max='9432' data-delay='50'
+                                    data-increment='50'></span>
                             </h2>
-                            <h5 class="desc"><b>Cup Of Coffee</b></h5>
+                            <h5 class="desc">Cup Of Coffee</h5>
                         </div>
                     </div>
                 </div>
