--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                            <a class='target' href="https://loving-hoover-e9746f.netlify.com/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/azzar.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://confident-thompson-c5ea7b.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/affiliate.png");'>
                                 </div>
