--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                 </div>
-                <a class="download-btn wow fadeInRight animated" href="Resume .pdf" target='_blank'>
+                <a class="download-btn custom-btn wow fadeInRight animated" href="Resume .pdf" target='_blank'>
                     <span>Download CV</span>
                 </a>
             </div>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://loving-hoover-e9746f.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/azzar.png");'>
                                 </div>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://confident-thompson-c5ea7b.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/affiliate.png");'>
                                 </div>
@@ -143,21 +143,21 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://angry-haibt-965b5a.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/bandeja.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://dazzling-fermat-e7d4cb.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/blueray.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://vigorous-cori-ee1d4c.netlify.com/#secondPage"
                                 target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/boho.png");'></div>
@@ -165,21 +165,21 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://naughty-lewin-fb311b.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/foton.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://kind-einstein-ed8b3f.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/icons.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://lucid-lichterman-35a974.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/inspiration-app.png");'>
                                 </div>
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://amazing-raman-07d5be.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page.png");'>
                                 </div>
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://brave-borg-6ae401.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page-2.png");'>
                                 </div>
@@ -203,28 +203,28 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://heuristic-benz-65e196.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/magaza.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://cranky-williams-ea5b08.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/meer.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://nifty-booth-e758c2.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/remax.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://adoring-lichterman-05ea1a.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/reservation.png");'>
                                 </div>
@@ -232,27 +232,30 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://sleepy-brown-8c05c1.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/ugb.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://relaxed-villani-2f57be.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/blueelsokhna.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                        <div class="my-work">
                             <a class='target' href="https://mystifying-bardeen-9a0289.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/workflow.png");'>
                                 </div>
                             </a>
                         </div>
                     </div>
+                </div>
+                <div class='custom-btn text-center'>
+                    <span id='loadMore' class="btn text-capitalize">show more</span>
                 </div>
             </div>
         </section>
