--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     </div>
                 </div>
                 <div class='custom-btn text-center'>
-                    <span id='loadMore' class="btn text-capitalize">show more</span>
+                    <span id='loadMore' class="text-capitalize">show more</span>
                 </div>
             </div>
         </section>
