--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
+                            <a class='target' href="https://elastic-babbage-7892bd.netlify.app/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/ilead.png");background-size: contain; background-position: center;'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
                             <a class='target' href="https://zen-shannon-0061e8.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/landing_page.png");background-size: contain; background-position: center;'>
                                 </div>
