--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <body>
-        
+
         <!-- scroll to top button -->
 
         <div class="scroll-to-top">
@@ -72,7 +72,8 @@
                     <div class="col-md-1 col-lg-2"></div>
                     <div class="col-md-10 col-lg-8">
                         <div class="intro wow fadeInUp animated">
-                            <div class="profile-img wow fadeIn animated" data-wow-delay="0.3s"><img src="imgs/avatar.png" alt=""></div>
+                            <div class="profile-img wow fadeIn animated" data-wow-delay="0.3s"><img
+                                    src="imgs/avatar.png" alt=""></div>
                             <div>
                                 <h1><b>Mohamed Elsayed</b></h1>
                                 <h4 class="font-blue">{ Front-end Developer }</h4>
@@ -128,8 +129,18 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
+                            <a class='target' href="https://l-journey.netlify.app/" target="_blank">
+                                <div class="fluidbox__wrap"
+                                    style='background-image: url("imgs/CRM Lead Journey.png");background-size: contain; background-position: center;'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
                             <a class='target' href="https://elastic-babbage-7892bd.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/ilead.png");background-size: contain; background-position: center;'>
+                                <div class="fluidbox__wrap"
+                                    style='background-image: url("imgs/ilead.png");background-size: contain; background-position: center;'>
                                 </div>
                             </a>
                         </div>
@@ -137,7 +148,8 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://zen-shannon-0061e8.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/landing_page.png");background-size: contain; background-position: center;'>
+                                <div class="fluidbox__wrap"
+                                    style='background-image: url("imgs/landing_page.png");background-size: contain; background-position: center;'>
                                 </div>
                             </a>
                         </div>
@@ -145,7 +157,8 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://priceless-varahamihira-5d48a6.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/Osus_Home.png");background-size: contain; background-position: center;'>
+                                <div class="fluidbox__wrap"
+                                    style='background-image: url("imgs/Osus_Home.png");background-size: contain; background-position: center;'>
                                 </div>
                             </a>
                         </div>
@@ -265,7 +278,8 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://relaxed-villani-2f57be.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/blueelsokhna.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/blueelsokhna.png");'>
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -306,25 +320,29 @@
                         <div class="row pt-3 text-center">
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s" data-percent="90">90%</div>
+                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s"
+                                        data-percent="90">90%</div>
                                     <h6 class="label mt-3 text-white">HTML &amp; CSS</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s" data-percent="75">75%</div>
+                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s"
+                                        data-percent="75">75%</div>
                                     <h6 class="label text-white mt-3">JAVASCRIPT</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s" data-percent="85">85%</div>
+                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s"
+                                        data-percent="85">85%</div>
                                     <h6 class="label text-white mt-3">ANIMATION</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s" data-percent="80">80%</div>
+                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s"
+                                        data-percent="80">80%</div>
                                     <h6 class="label text-white mt-3">WEB DESIGN</h6>
                                 </div>
                             </div>
@@ -398,7 +416,8 @@
                 <div class="container">
                     <div class="row align-items-center justify-content-between">
                         <div class="col-md-6">
-                            <p class="copyright text-white"> Copyright <span><b>©</b></span> <span><b>2020</b></span> All
+                            <p class="copyright text-white"> Copyright <span><b>©</b></span> <span><b>2020</b></span>
+                                All
                                 rights reserved </p>
                         </div>
                         <div class="col-md-6">
