--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
+                            <a class='target' href="https://lucid-lichterman-35a974.netlify.com/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/inspiration-app.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work">
                             <a class='target' href="https://l-journey.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap"
                                     style='background-image: url("imgs/CRM Lead Journey.png");background-size: contain; background-position: center;'>
@@ -138,7 +146,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://elastic-babbage-7892bd.netlify.app/" target="_blank">
+                            <a class='target' href="https://i-lead.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap"
                                     style='background-image: url("imgs/ilead.png");background-size: contain; background-position: center;'>
                                 </div>
@@ -147,7 +155,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://zen-shannon-0061e8.netlify.app/" target="_blank">
+                            <a class='target' href="https://osus-lp.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap"
                                     style='background-image: url("imgs/landing_page.png");background-size: contain; background-position: center;'>
                                 </div>
@@ -156,7 +164,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://priceless-varahamihira-5d48a6.netlify.app/" target="_blank">
+                            <a class='target' href="https://osus.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap"
                                     style='background-image: url("imgs/Osus_Home.png");background-size: contain; background-position: center;'>
                                 </div>
@@ -165,7 +173,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://loving-hoover-e9746f.netlify.com/" target="_blank">
+                            <a class='target' href="https://azzar.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/azzar.png");'>
                                 </div>
                             </a>
@@ -173,7 +181,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://confident-thompson-c5ea7b.netlify.com/" target="_blank">
+                            <a class='target' href="https://arab-affiliate.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/affiliate.png");'>
                                 </div>
                             </a>
@@ -181,51 +189,42 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://angry-haibt-965b5a.netlify.com/" target="_blank">
+                            <a class='target' href="https://bandeja.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/bandeja.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://dazzling-fermat-e7d4cb.netlify.com/" target="_blank">
+                            <a class='target' href="https://blueray.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/blueray.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://vigorous-cori-ee1d4c.netlify.com/#secondPage"
-                                target="_blank">
+                            <a class='target' href="https://lp-boho.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/boho.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://naughty-lewin-fb311b.netlify.com/" target="_blank">
+                            <a class='target' href="https://foton-cars.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/foton.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://kind-einstein-ed8b3f.netlify.com/" target="_blank">
+                            <a class='target' href="https://eg-icons.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/icons.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://lucid-lichterman-35a974.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/inspiration-app.png");'>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="my-work">
-                            <a class='target' href="https://amazing-raman-07d5be.netlify.com/" target="_blank">
+                            <a class='target' href="https://lp-mbg.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page.png");'>
                                 </div>
                             </a>
@@ -233,7 +232,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://brave-borg-6ae401.netlify.com/" target="_blank">
+                            <a class='target' href="https://owest.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page-2.png");'>
                                 </div>
                             </a>
@@ -241,28 +240,28 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://heuristic-benz-65e196.netlify.com/" target="_blank">
+                            <a class='target' href="https://maagaza.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/magaza.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://cranky-williams-ea5b08.netlify.com/" target="_blank">
+                            <a class='target' href="https://meer.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/meer.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://nifty-booth-e758c2.netlify.com/" target="_blank">
+                            <a class='target' href="https://remax-ree.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/remax.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://adoring-lichterman-05ea1a.netlify.com/" target="_blank">
+                            <a class='target' href="https://book-a-hotel.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/reservation.png");'>
                                 </div>
                             </a>
@@ -270,14 +269,14 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://sleepy-brown-8c05c1.netlify.com/" target="_blank">
+                            <a class='target' href="https://ugp-ree.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/ugb.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://relaxed-villani-2f57be.netlify.com/" target="_blank">
+                            <a class='target' href="https://blue-elsokhna.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/blueelsokhna.png");'>
                                 </div>
                             </a>
@@ -285,7 +284,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://mystifying-bardeen-9a0289.netlify.com/" target="_blank">
+                            <a class='target' href="https://i-workflow.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/workflow.png");'>
                                 </div>
                             </a>
