--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://lucid-lichterman-35a974.netlify.com/" target="_blank">
+                            <a class='target' href="https://lp-inspiration.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/inspiration-app.png");'>
                                 </div>
                             </a>
