--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>Simple Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="shortcut icon" href="imgs/avatar.png">
+    <link rel="shortcut icon" href="imgs/avatar.jpeg">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/ionicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
@@ -73,7 +73,7 @@
                     <div class="col-md-10 col-lg-8">
                         <div class="intro wow fadeInUp animated">
                             <div class="profile-img wow fadeIn animated" data-wow-delay="0.3s"><img
-                                    src="imgs/avatar.png" alt=""></div>
+                                    src="imgs/avatar.jpeg" alt=""></div>
                             <div>
                                 <h1><b>Mohamed Elsayed</b></h1>
                                 <h4 class="font-blue">{ Front-end Developer }</h4>
@@ -137,9 +137,9 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
-                            <a class='target' href="https://l-journey.netlify.app/" target="_blank">
+                            <a class='target' href="https://click-to-grill.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("imgs/CRM Lead Journey.png");background-size: contain; background-position: center;'>
+                                    style='background-image: url("imgs/Click To Grill _.png");background-size: contain; background-position: center;'>
                                 </div>
                             </a>
                         </div>
