--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- scroll to top button -->
 
         <div class="scroll-to-top">
-            <img src="imgs/back-to-top-arrow.png" alt="">
+            <img src="imgs/back-to-top-arrow.jpg" alt="">
         </div>
 
         <!-- HEADER -->
@@ -130,7 +130,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://lp-inspiration.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/inspiration-app.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/inspiration-app.jpg");'>
                                 </div>
                             </a>
                         </div>
@@ -139,7 +139,7 @@
                         <div class="my-work">
                             <a class='target' href="https://click-to-grill.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("imgs/Click To Grill _.png");background-size: contain; background-position: center;'>
+                                    style='background-image: url("imgs/Click To Grill _.jpg");background-size: contain; background-position: center;'>
                                 </div>
                             </a>
                         </div>
@@ -148,7 +148,7 @@
                         <div class="my-work">
                             <a class='target' href="https://i-lead.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("imgs/ilead.png");background-size: contain; background-position: center;'>
+                                    style='background-image: url("imgs/ilead.jpg");background-size: contain; background-position: center;'>
                                 </div>
                             </a>
                         </div>
@@ -157,7 +157,7 @@
                         <div class="my-work">
                             <a class='target' href="https://osus-lp.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("imgs/landing_page.png");background-size: contain; background-position: center;'>
+                                    style='background-image: url("imgs/landing_page.jpg");background-size: contain; background-position: center;'>
                                 </div>
                             </a>
                         </div>
@@ -166,7 +166,7 @@
                         <div class="my-work">
                             <a class='target' href="https://osus.netlify.app/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("imgs/Osus_Home.png");background-size: contain; background-position: center;'>
+                                    style='background-image: url("imgs/Osus_Home.jpg");background-size: contain; background-position: center;'>
                                 </div>
                             </a>
                         </div>
@@ -174,7 +174,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://azzar.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/azzar.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/azzar.jpg");'>
                                 </div>
                             </a>
                         </div>
@@ -182,7 +182,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://arab-affiliate.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/affiliate.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/affiliate.jpg");'>
                                 </div>
                             </a>
                         </div>
@@ -190,42 +190,42 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://bandeja.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/bandeja.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/bandeja.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://blueray.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/blueray.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/blueray.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://lp-boho.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/boho.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/boho.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://foton-cars.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/foton.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/foton.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://eg-icons.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/icons.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/icons.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://lp-mbg.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page.jpg");'>
                                 </div>
                             </a>
                         </div>
@@ -233,7 +233,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://owest.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page-2.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page-2.jpg");'>
                                 </div>
                             </a>
                         </div>
@@ -241,28 +241,28 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://maagaza.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/magaza.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/magaza.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://meer.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/meer.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/meer.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://remax-ree.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/remax.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/remax.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://book-a-hotel.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/reservation.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/reservation.jpg");'>
                                 </div>
                             </a>
                         </div>
@@ -270,14 +270,14 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://ugp-ree.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/ugb.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/ugb.jpg");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://blue-elsokhna.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/blueelsokhna.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/blueelsokhna.jpg");'>
                                 </div>
                             </a>
                         </div>
@@ -285,7 +285,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work">
                             <a class='target' href="https://i-workflow.netlify.app/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("imgs/workflow.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/workflow.jpg");'>
                                 </div>
                             </a>
                         </div>
